# pyStreams

./: .gitignore  README.md  pyproject.toml
SPLnetwork/: network.py
pyStreams/: network.py
pyStreams.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
